# mesh-shader

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
Resources/Shaders/: LitShader.hlsl
Resources/Shaders/GLSL/: LitShader.frag  LitShader.vert
Resources/Shaders/HLSL/: LitShader.hlsl  MeshLitShader.hlsl
Resources/Textures/RustedIron2/: ReadMe.md
Sources/: main.cpp  mainDX12.cpp  mainVK.cpp
